fix(worker): Remove Sentry re-initialization in forked workers (#680)
* fix(worker): Remove Sentry re-initialization in forked workers

Removes the `initialize_sentry_for_worker_process` signal handler that was
calling `sentry_sdk.init()` again in each forked worker process.

We believe this may be breaking CeleryIntegration's `build_tracer` patch -
calling init() a second time in child processes could interfere with the
patches that were already applied in the parent process before fork.

Investigation findings:
- Staging (Dec 17, 2025 code without this handler) has working worker traces
- Production (with this handler) has zero worker transactions in Sentry
- Trace analysis shows API spans but no worker spans in production
- Diagnostic check showed `build_tracer patched: False` in production

The parent process's Sentry initialization (via `celeryd_init` signal in
app.py) should be inherited by forked children, so re-initialization may
not be needed.

Relates to: CCMRG-2037

* fix(worker): Update Docker command in Makefile to use 'docker compose' syntax

* fix(ci): Update docker-compose to docker compose in CI tests Makefile

Updates all docker-compose commands to use docker compose (v2 syntax)
in docker/Makefile.ci-tests. The CI environment only has Docker Compose
v2 available, which uses the space-separated syntax.

This fixes CI test failures where docker-compose command was not found.

Related to: CCMRG-2037

--- a/apps/worker/Makefile
+++ b/apps/worker/Makefile
@@ -24,4 +24,4 @@ test:
 	pytest --cov=./ --junitxml=junit.xml -o junit_family=legacy -c pytest.ini --rootdir=${PYTEST_ROOTDIR}
 
 shell:
-	docker-compose exec worker bash
+	docker compose exec worker bash
